@@ -1,4 +1,5 @@
 version 2.1-rc2 - XX-May-2013
+. [NEW] Director: Added popToSceneStackLevel method
 . [NEW] Scheduler: Added 'setPaused' / 'isPaused' property
 . [FIX] DrawingPrimitives: DrawSolidCircle calls lazy_init()
 . [FIX] Layer: "swallow" is now a property. Can be changed in runtime.
